Fixing container padding when navbar collapses

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,7 +128,7 @@
 
             .container {
                 background-color: #EEE;
-		margin-top: 100px;
+		margin-top: 95px;
 	        padding: 5px;
             }
 
